li add and paddin margine add

--- a/style/Style.css
+++ b/style/Style.css
@@ -1,4 +1,8 @@
-h3 {
-    text-decoration-color: aquamarine;
+div {
+background-color: aqua;
+padding: 10px;
+margin-bottom: 20px;
+border-radius: 5px; 
+   
 
 }
