--- a/style/Style.css
+++ b/style/Style.css
@@ -1,8 +1,22 @@
 div {
 background-color: aqua;
 padding: 10px;
+text-align: center;
 margin-bottom: 20px;
 border-radius: 5px; 
-   
+
+}
+
+.title{
+    color:red;
+    text-align: center;
+    border-bottom: 10px;
+
+} 
+
+#add{
+    text-align: center;
+    background-color: brown;
+    color: white;
 
 }
